<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home_4x"
        android:title="@string/home" />

    <item
        android:id="@+id/historyFragment"
        android:icon="@drawable/ic_history_3x"
        android:title="@string/history" />
    <item
        android:id="@+id/supportFragment"
        android:icon="@drawable/support_3x"
        android:title="@string/support" />
    <item
        android:id="@+id/termsConditionFragment"
        android:icon="@drawable/ic_term_co"
        android:title="@string/terms_amp_condition" />

    <item
        android:id="@+id/privacyPolicyFragment"
        android:icon="@drawable/ic_privacy_3x"
        android:title="@string/privacy_policy" />

    <item
        android:id="@+id/navLogout"
        android:icon="@drawable/ic_logout_black_24dp"
        android:title="@string/logout" />

    <item
        android:id="@+id/navLogout1"
        android:title="" />
    <item
        android:id="@+id/navLogout2"
        android:title="" />
    <item
        android:id="@+id/navLogout6"
        android:title="" />
    <item
        android:id="@+id/navLogout8"
        android:title="" />


</menu>